--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 Class="practice">h1</h1>
+    <h1 Class="practice">Header</h1>
+    <P>Hello</P>
 </body>
 </html>
